# multimind

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_ARCHITECTURE.md  README.md  bunfig.toml  docker-compose.prod.yml  docker-compose.testdb.yml  docker-compose.yml  package-lock.json  package.json  render.yaml  vite.config.ts
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_org_models.py  003_verdict_lessons.py  004_user_brains.py  005_audit_logs.py  006_preserve_verdict_lessons.py  007_lesson_discussion.py  008_saved_verdicts.py  008_scraping_council.py  009_scraping_blueprint_display_name.py  010_dynamic_scraping_team_planner.py  (+13 more)
backend/app/: main.py
backend/scripts/: delete_all_chats.py  delete_all_data.py  docker-entrypoint.sh  enrich_austria_demo_websites.py  extract_one_source_document.py  publish_one_facility_candidate.py  resume_facility_phases.py  retrieve_one_source_candidate.py  seed.py  seed_austria_census_demo.py  smoke_live_scrape.py  test_api.py  test_openrouter_key.py
backend/tests/: conftest.py  test_chat_pin_and_saved_documents.py  test_saved_verdicts.py  test_saved_verdicts_migration.py  test_scraping.py  test_scraping_crawl_links.py  test_scraping_facility_extraction.py  test_scraping_facility_publication.py  test_scraping_loop_watchdog.py  test_scraping_scale_profile.py  test_scraping_source_discovery.py  test_scraping_source_retrieval.py  test_transcription_service.py  test_transcriptions.py  test_turn_deletion.py
(+233 files in other folders)
